<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:title="@string/settings_title">

    <ListPreference
        android:defaultValue="@string/settings_order_by_default"
        android:entries="@array/settings_order_by_labels"
        android:entryValues="@array/settings_order_by_values"
        android:key="@string/settings_order_by_key"
        android:title="@string/settings_order_by_label" />

    <EditTextPreference
        android:defaultValue="@string/settings_min_magnitude_default"
        android:inputType="numberDecimal"
        android:key="@string/settings_min_magnitude_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_min_magnitude_label" />
    <EditTextPreference
        android:defaultValue="20"
        android:inputType="numberDecimal"
        android:key="@string/settings_limit_key"
        android:selectAllOnFocus="true"
        android:title="@string/settings_limit_label" />
    <SwitchPreference
        android:defaultValue="false"
        android:title="You Are the Center"
        android:key="switch_preference_1"/>
    <EditTextPreference
        android:defaultValue="400"
        android:selectAllOnFocus="true"
        android:inputType="numberDecimal"
        android:title="The Radius_km (From Your Location)"
        android:key="max_radius"/>
</PreferenceScreen>